--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,45 @@
-version: '3'
+version: '2.5.1'
 
 services:
   db:
+    container_name: db
     image: mysql:5
     command: --character-set-server=utf8 --collation-server=utf8_general_ci
     restart: always
+    networks:
+      - bubbles-network
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: lemon-bubbles
     ports:
-      - '3306:3306'
+      - 3306:3306
+    healthcheck:
+      test: "/etc/init.d/mysql status"
+      interval: 1s
+      retries: 120
+    volumes:
+      - data:/var/lib/db/data
+  main:
+    container_name: main
+    build:
+      context: .
+      target: development
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - 3000:3000
+    command: npm run start:dev
+    env_file:
+      - .env.local
+    networks:
+      - bubbles-network
+    depends_on:
+      db:
+        condition: 'service_healthy'
+    links: 
+        - db
+networks:
+  bubbles-network:
+volumes:
+  data:
