Add auth by jwt

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-DB_DATABASE = ''
-DB_PORT = ''
-DB_HOST = ''
-DB_PASSWORD = ''
-DB_USERNAME = ''
+DB_DATABASE = 'lemon-bubbles'
+DB_PORT = '3306'
+DB_HOST = '127.0.0.1'
+DB_PASSWORD = 'root'
+DB_USERNAME = 'root'
 DEFAULT_USER_PASSWORD = ''
 DEFAULT_USER_EMAIL = ''
 DEFAULT_USER_LOGIN = ''
+PORT = '3000'
+SECRET_KEY = 'jwt_key'
